Authentication pages work. Css still needs work. Uses materialize css

--- a/src/authorization/App.css
+++ b/src/authorization/App.css
@@ -1,24 +1,50 @@
-.App {
+.App-container {
   text-align: center;
-}
+  background-color: #0288d1;
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 170px;
   padding: 20px;
   color: white;
 }
 
-.App-intro {
+/*.App-intro {
   font-size: large;
+}*/
+/*
+.fa {
+  position: absolute;
+  top: 30px;
+  right: 20px;
+  margin-right: 20px
+}*/
+
+.buttonLabel {
+  color: white;
+  position: absolute;
+  top: 30px;
+  right: 100px;
+  text-align: right;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+
+.box {
+  text-align: left;
+}
+
+.container {
+  background-color: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-top: 70px;
+}
+
+h3 {
+  color: #4e342e;
+  font-weight: 100;
 }
