--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+.leaflet-container {
+    height: 400px;
+    width: 100%;
 }
