--- a/src/authorization/App.css
+++ b/src/authorization/App.css
@@ -1,6 +1,7 @@
 .App-container {
   text-align: center;
   background-color: #0288d1;
+  height: 100vh;
 
 }
 
@@ -47,4 +48,30 @@
 h3 {
   color: #4e342e;
   font-weight: 100;
+}
+
+.navbar {
+  border-bottom: 1px solid white;
+  background-color: #757575;
+  width:100%;
+  height:40px;
+  padding top:15px;
+  padding-bottom:20px;
+
+}
+
+a.link {
+  color:white;
+  text-decoration: none;
+  margin-right: 50px;
+  opacity: .4;
+  text-align: center;
+}
+
+a.link.active {
+  opacity:1;
+}
+
+a > i {
+  opacity: 1;
 }
