--- a/src/authorization/App.css
+++ b/src/authorization/App.css
@@ -55,15 +55,15 @@ h3 {
   background-color: #757575;
   width:100%;
   height:40px;
-  padding top:15px;
-  padding-bottom:20px;
+  padding-top:8px;
+  padding-bottom:5px;
 
 }
 
 a.link {
   color:white;
   text-decoration: none;
-  margin-right: 50px;
+  margin-right: 80px;
   opacity: .4;
   text-align: center;
 }
