--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,24 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background-color: #0288d1;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background-color: #0288d1;
 }
 
 .leaflet-container {
     height: 400px;
     width: 100%;
+}
+
+#zipcode {
+    margin-top: 7px;
+}
+
+#results {
+    overflow-y: scroll;
+    height: 400px;
 }
