--- a/src/authorization/SignOut.css
+++ b/src/authorization/SignOut.css
@@ -1,5 +1,15 @@
 .sign-out {
     position:absolute;
-    top:60px;
-    right:100px;
+    top:130px;
+    right:140px;
+}
+
+@media only screen and (min-width: 768px) {
+  .sign-out {
+      position:absolute;
+      top:60px;
+      right:100px;
+
+  }
+
 }
