CSS for mobile. Header works

--- a/src/authorization/App.css
+++ b/src/authorization/App.css
@@ -12,6 +12,9 @@
   color: white;
 }
 
+.header-title {
+  line-height: 2rem;
+}
 
 
 /*.App-intro {
@@ -28,9 +31,10 @@
 
 .buttonLabel {
   color: white;
-  position: absolute;
-  top: 100px;
-  left: 140px;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-block;
+
 
 }
 
@@ -90,6 +94,10 @@ a > i {
 
     .App-header {
       height: 170px;
+    }
+
+    .header-title {
+      line-height: 4.62rem;
     }
 
 
