--- a/src/authorization/SignOut.css
+++ b/src/authorization/SignOut.css
@@ -1,7 +1,9 @@
 .sign-out {
-    position:absolute;
-    top:130px;
-    right:140px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:20px;
+    display: inline-block;
+
 }
 
 @media only screen and (min-width: 768px) {
@@ -9,6 +11,7 @@
       position:absolute;
       top:60px;
       right:100px;
+      margin-top:0px;
 
   }
 
