--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: Railway, Lato, sans-serif;
     background-color: #0288d1;
 }
 
@@ -44,4 +44,11 @@ body {
 #results {
     overflow-y: scroll;
     height: 400px;
+}
+
+@media only screen and (max-width: 768px) {
+  #theater_intro {
+    margin-top: 20px;
+  }
+
 }
