--- a/src/ChatDisplay.css
+++ b/src/ChatDisplay.css
@@ -1,4 +1,26 @@
 #chatBox {
   height: 400px;
   border: solid black 2px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin-top: 0;
+  overflow-y: scroll;
+  text-align: left;
+}
+
+#chatBox img {
+  width: 75px;
+  height: 75px;
+  float:left;
+  margin-right: 1rem;
+}
+
+strong {
+  font-weight: bold;
+}
+
+.indVidualChat {
+  overflow: auto;
 }
