--- a/src/PersonalMovieList.css
+++ b/src/PersonalMovieList.css
@@ -1,5 +1,33 @@
+.flexbox-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.flex-column {
+  flex-basis: 100%;
+}
+
+#movieBox {}
+
 #movieList {
-  background-color:white;
-  padding: 1rem;
-  border: solid black 3px;
+  border: solid black 1px;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-block;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  padding-top: 0.5rem;
+
+}
+
+@media only screen and (min-width: 768px) {
+  .flex-column {
+    flex-basis: 50%;
+  }
+
+  #movieList {
+    width: 95%;
+    border: solid 1px;
+  }
 }
