--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,10 @@ body {
     height: 400px;
 }
 
+#vote_average {
+  font-weight: bold;
+}
+
 @media only screen and (max-width: 768px) {
   #theater_intro {
     margin-top: 20px;
